Made order list from newest to oldest. Fixed h1 alignment.

--- a/public/css/order.css
+++ b/public/css/order.css
@@ -1,5 +1,9 @@
 /******* BUYER ORDERS PAGE *******/
 
+h1{
+    margin-left: -17px !important;
+}
+
 #message {
     font-style: italic;
 }
